--- a/configs/features.yaml
+++ b/configs/features.yaml
@@ -6,7 +6,7 @@ required:                       # pencerede en az bunlar olmalı
 
 ppg:
   use_hr_if_available: true
-  peak_prominence: 0.01         # 4 Hz BVP için makul başlangıç
+  peak_prominence: 0.03   # 0.01 → 0.03 (yanlış tepeyi azaltır)
   min_hr_bpm: 40
   max_hr_bpm: 180
 
@@ -19,7 +19,7 @@ temp:
   slope_poly_degree: 1
 
 acc:
-  movement_g: 1.4               # acc_mag > 1.4g ise hareket kabul (QA için)
+  movement_dyn_g: 0.35   # 0.20 → 0.35 (yürüyüşü “artefakt” sayma)
 
 io:
   windows_index: "data/interim/windows_index.csv"
